--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/trunkSwitch" />
 
     <Switch
-        android:id="@+id/passangerSwitch"
+        android:id="@+id/passengerSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -70,7 +70,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/back_left"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/passangerSwitch" />
+        app:layout_constraintTop_toBottomOf="@+id/passengerSwitch" />
 
     <Switch
         android:id="@+id/rightSwitch"
