--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,131 +5,83 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
-
     android:layout_height="match_parent"
-
-    android:background="@android:color/background_light"
+    android:background="@android:color/background_dark"
     tools:context="com.example.ioutd.teslavalet.MainActivity">
 
 
     <Button
-
         android:id="@+id/button"
-
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
-
         android:layout_marginEnd="8dp"
-
         android:layout_marginStart="8dp"
-
         android:layout_marginTop="8dp"
-
         android:text="@string/demo_button"
-
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent" />
 
 
     <fragment
-
         android:id="@+id/map"
-
         android:name="com.google.android.gms.maps.MapFragment"
-
         android:layout_width="0dp"
-
         android:layout_height="0dp"
-
         android:layout_marginBottom="16dp"
-
         android:layout_marginEnd="16dp"
-
         android:layout_marginStart="16dp"
-
         android:layout_marginTop="16dp"
-
         app:layout_constraintBottom_toTopOf="@+id/textView"
-
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/button" />
 
 
     <TextView
-
         android:id="@+id/textView"
-
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
-
         android:layout_marginBottom="8dp"
-
         android:layout_marginEnd="8dp"
-
         android:layout_marginStart="8dp"
-
         android:layout_marginTop="8dp"
-
         android:text="@string/preferences_header"
-
-        android:textColor="@android:color/black"
-
+        android:textColor="@android:color/background_light"
         android:textSize="18sp"
-
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <Switch
-
-        android:id="@+id/trunkSwitch"
-
+        android:id="@+id/Trunk"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
-
-        android:layout_marginEnd="4dp"
-
-        android:layout_marginTop="16dp"
-        android:layout_marginTop="12dp"
-
+        android:layout_marginTop="10dp"
         android:thumbTint="@android:color/black"
         android:track="@android:color/background_light"
         android:trackTint="@android:color/background_light"
-
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-
-        app:layout_constraintTop_toBottomOf="@+id/frunkSwitch" />
-
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="256dp" />
 
     <Switch
-
-        android:id="@+id/driverSwitch"
-
+        android:id="@+id/trunkSwitch"
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="16dp"
-
-        android:text="@string/driver"
         android:layout_marginTop="12dp"
+        android:thumbTint="@android:color/black"
+        android:track="@android:color/background_light"
+        android:trackTint="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/Trunk" />
 
+    <Switch
+        android:id="@+id/driverSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:thumbTint="@android:color/black"
         android:track="@android:color/background_light"
         android:trackTint="@android:color/background_light"
@@ -138,94 +90,109 @@
 
 
     <Switch
-
         android:id="@+id/passengerSwitch"
-
         android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="16dp"
-
-        android:text="@string/passanger"
+        android:layout_height="23dp"
         android:layout_marginTop="12dp"
-
         android:thumbTint="@android:color/black"
         android:track="@android:color/background_light"
         android:trackTint="@android:color/background_light"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-
         app:layout_constraintTop_toBottomOf="@+id/driverSwitch" />
 
-
     <Switch
-
         android:id="@+id/leftSwitch"
-
         android:layout_width="wrap_content"
-
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="16dp"
-
-        android:text="@string/back_left"
-
         android:layout_marginTop="12dp"
-
         android:thumbTint="@android:color/black"
         android:track="@android:color/background_light"
         android:trackTint="@android:color/background_light"
-
         app:layout_constraintEnd_toEndOf="@+id/textView"
-
         app:layout_constraintTop_toBottomOf="@+id/passengerSwitch" />
 
-
     <Switch
-
         android:id="@+id/rightSwitch"
-
         android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="16dp"
-
-        android:text="@string/back_right"
+        android:layout_height="23dp"
         android:layout_marginTop="12dp"
-
         android:thumbTint="@android:color/black"
         android:track="@android:color/background_light"
         android:trackTint="@android:color/background_light"
-
         app:layout_constraintEnd_toEndOf="@+id/textView"
-
         app:layout_constraintTop_toBottomOf="@+id/leftSwitch" />
-
-
-    <Switch
-
-        android:id="@+id/frunkSwitch"
-
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="12dp"
-
-        android:thumbTint="@android:color/black"
-        android:track="@android:color/background_light"
-        android:trackTint="@android:color/background_light"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="526dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Open the Frunk (Font Trunk)"
-        tools:layout_editor_absoluteX="123dp"
-        tools:layout_editor_absoluteY="305dp" />
+        android:layout_margin_left="16dp"
+        android:layout_marginTop="16dp"
+        android:text="1. Open the Frunk (Font Trunk)"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:layout_marginBottom="46dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="47dp"
+        android:text="3. Open Driver's seats"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/trunkSwitch"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="16dp"
+        android:text="3. Open passengers door"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="16dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="26dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginStart="16dp"
+        android:text="4. Back driver's door"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="16dp" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:text="5. Open back passenger's door"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginLeft="16dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:text="2. Open the Back Trunk"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        android:layout_marginLeft="16dp" />
 
 </android.support.constraint.ConstraintLayout>
